fixed html set up

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="icon" type="image/png" href="assets/shareit-favicon.png">
+  <link rel="stylesheet" href="stylesheets/normalize.css">
+  <link rel="stylesheet" href="stylesheets/index.css">
+  <title>SHAREit | If it's your jam, SHAREit!</title>
 </head>
 
 <body>
+  Testing
 
 
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
-  <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
   <script src="src/index.js" charset="utf-8"></script>
-
-
 </body>
 
 </html>
