--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
-  Testing
+<input type='text' id='linkID'></input>
+<button type="button" id='send' name="button">Activate</button>
+
+<div class="content"></div>
 
 
-
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
-  <script src="src/index.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
+<script src="src/index.js" charset="utf-8"></script>
 </body>
 
 </html>
