search functionality added. share button plugin added.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,43 @@
   <link rel="icon" type="image/png" href="assets/shareit-favicon.png">
   <link rel="stylesheet" href="stylesheets/normalize.css">
   <link rel="stylesheet" href="stylesheets/index.css">
-  <title>SHAREit | If it's your jam, SHAREit!</title>
+  <title>SHAREit | If you dig it...SHAREit!</title>
+
+  <!-- sharing buttons plugin -->
+  <script type="text/javascript">
+    var switchTo5x = true;
+
+  </script>
+  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+  <script type="text/javascript">
+    stLight.options({
+      publisher: "932a0ab8-e522-4c6d-b679-4be0e6fb3f12",
+      doNotHash: false,
+      doNotCopy: false,
+      hashAddressBar: true
+    });
+
+  </script>
 </head>
 
 <body>
-  Testing
 
 
+  <form class="search" role="search">
+    <label for="character">Character Search</label>
+    <input class="pageReq" id="pageReq" type="text" name="name" placeholder="Search here">
+    <input class="loadReq" type="submit" name="name" value="Search">
+  </form>
 
+  <div class="player">
+  </div>
+  <div class="shareButtons">
+    <span class='st_facebook_large' displayText='Facebook'></span>
+    <span class='st_twitter_large' displayText='Tweet'></span>
+    <span class='st_pinterest_large' displayText='Pinterest'></span>
+    <span class='st_tumblr_large' displayText='Tumblr'></span>
+    <span class='st_email_large' displayText='Email'></span>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
   <script src="src/index.js" charset="utf-8"></script>
