full search functionality added with embedded audio player

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <input class="loadReq" type="submit" name="name" value="Search">
   </form>
 
-  <div class="player">
+  <div class="content">
   </div>
   <div class="shareButtons">
     <span class='st_facebook_large' displayText='Facebook'></span>
