updated some stylings

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" href="assets/images/shareit-favicon.png">
   <link rel="stylesheet" href="assets/stylesheets/normalize.css">
   <link rel="stylesheet" href="assets/stylesheets/index.css">
-  <title>SHAREit | If you dig it...SHAREit!</title>
+  <title>SHAREit | If you like it...SHAREit!</title>
   <script src="https://use.fontawesome.com/c218135cef.js"></script>
 </head>
 
