--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <div class="main-container">
   <div class="header">
-    <img class="word-logo" src="../assets/shareit-icon-words.png"/>
+    <img class="word-logo" src="../assets/images/shareit-icon-words.png"/>
     <form class="search" role="search">
       <label for="searchRequest"></label>
       <input class="pageReq" id="pageReq" type="text" name="name" placeholder="Search track here">
@@ -28,19 +28,18 @@
   </div>
   <div class= "middle-section-mobile">
     <ul class="listen-likeit">
-      <li>Listen.</li>
-      <li>Like it?</li>
+      <li class="list-item">Listen.</li>
+      <li class="list-item">Like it?</li>
     </ul>
-    <img class="word-logo" src="../assets/shareit-icon-words.png"/>
-  <form class="search" role="search">
-    <label for="searchRequest">Search Request</label>
-    <input class="pageReq" id="pageReq" type="text" name="name" placeholder="Search here">
-    <input class="loadReq" type="submit" name="name" value="Search">
-  </form>
+    <img class="word-logo" src="../assets/images/shareit-icon-words.png"/>
   <div class="content">
-    Welcome to SHAREit. The place where blah.... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </div>
+</div>
+<div class="footer">
+  <a href= "https://github.com/Share-It/shareit">
+    <img class="github-logo" src= "../assets/images/github-logo.svg"/>
+  </a>
+  <p class="fork-us">Fork us on GitHub</p>
 </div>
 </div>
 
