cleaning up file organization

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" type="image/png" href="assets/images/shareit-favicon.png">
   <link rel="stylesheet" href="stylesheets/normalize.css">
-  <link rel="stylesheet" href="stylesheets/hideshare.css">
+  <link rel="stylesheet" href="assets/hideshare/hideshare.css">
   <link rel="stylesheet" href="stylesheets/index.css">
   <title>SHAREit | If you dig it...SHAREit!</title>
   <script src="https://use.fontawesome.com/c218135cef.js"></script>
@@ -15,31 +15,32 @@
 
 <body>
 
-  <div class="header">
-    <a href="index.html"><img class="word-logo" src="assets/images/shareit-icon-words.png" />
-    </a>
-    <form class="search" role="search">
-      <label for="searchRequest">Search Request</label>
-      <input class="pageReq" id="pageReq" type="text" name="name" placeholder="Search here">
-      <input class="loadReq" type="submit" name="name" value="Search">
-    </form>
-  </div>
+  <div class="main-container">
+    <div class="header">
+      <a href="index.html"><img class="word-logo" src="assets/images/shareit-icon-words.png" />
+      </a>
+      <form class="search" role="search">
+        <label for="searchRequest">Search Request</label>
+        <input class="pageReq" id="pageReq" type="text" name="name" placeholder="Search here">
+        <input class="loadReq" type="submit" name="name" value="Search">
+      </form>
+    </div>
 
-  <div class="middle-section-mobile content">
-    <ul class="listen-likeit">
-      <li class="list-item">Listen.</li>
-      <li class="list-item">Like it?</li>
-    </ul>
-    <img class="word-logo" src="assets/images/shareit-icon-words.png" />
-  </div>
+    <div class="middle-section-mobile content">
+      <ul class="listen-likeit">
+        <li class="list-item">Listen.</li>
+        <li class="list-item">Like it?</li>
+      </ul>
+      <img class="word-logo" src="assets/images/shareit-icon-words.png" />
+    </div>
 
-  <div class="footer">
-    <a href="https://github.com/Share-It/shareit">
-      <img class="github-logo" src="assets/images/github-logo.svg" />
-    </a>
-    <p class="fork-us">Fork us on GitHub</p>
+    <div class="footer">
+      <a href="https://github.com/Share-It/shareit">
+        <img class="github-logo" src="assets/images/github-logo.svg" />
+      </a>
+      <p class="fork-us">Fork us on GitHub</p>
+    </div>
   </div>
-
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
   <script src="assets/hideshare/hideshare.js"></script>
