sam styling after track is searched

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 </head>
 
 <body>
+
   <div class="main-container">
     <div class="header">
       <a href="index.html"><img class="word-logo" src="assets/images/shareit-icon-words.png" />
       </a>
       <form class="search" role="search">
-        <label for="searchRequest">Search Request</label>
+        <label for="searchRequest"></label>
         <input class="pageReq" id="pageReq" type="text" name="name" placeholder="Search here">
         <input class="loadReq" type="submit" name="name" value="Search">
       </form>
